--- a/code/html/index.html
+++ b/code/html/index.html
@@ -20,11 +20,10 @@
             </div>
             <div id="2" class="select">1</div>
             <div id="3" class="select">
-                <math><mfrac>
+                <math>
                     <msqrt>
                         <mn>3</mn>
-                    </msqrt>
-                </mfrac></math>
+                    </msqrt></math>
             </div>
         </div>
         <div class="yoko">
