--- a/code/html/index.html
+++ b/code/html/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1 id="q">sin30°</h1>
+    <header>
+        <div id="time">10</div>
+        <h1 id="q">sin30°</h1>
+    </header>
+    
     <div class="answer">
         <div class="yoko">
             <div id="1" class="select">
@@ -56,5 +60,6 @@
         </div>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="js/init.js"></script>
+<script src="js/index.js"></script>
 </html>
