プラマイへの対応

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -11,16 +11,19 @@
     <div class="answer">
         <div class="yoko">
             <div id="1" class="select">
-                <math><mfrac>
+                <math>
+                    <mo></mo>
+                    <mfrac>
                         <mn>1</mn>
                         <msqrt>
                             <mn>3</mn>
                         </msqrt>
                     </mfrac></math>
             </div>
-            <div id="2" class="select">1</div>
+            <div id="2" class="select"><mo></mo>1</div>
             <div id="3" class="select">
                 <math>
+                    <mo></mo>
                     <msqrt>
                         <mn>3</mn>
                     </msqrt></math>
@@ -28,7 +31,9 @@
         </div>
         <div class="yoko">
             <div id="4" class="select">
-                <math><mfrac>
+                <math>
+                    <mo></mo>
+                    <mfrac>
                         <msqrt>
                             <mn>3</mn>
                         </msqrt>
@@ -36,7 +41,9 @@
                     </mfrac></math>
             </div>
             <div id="5" class="select">
-                <math><mfrac>
+                <math>
+                    <mo></mo>
+                    <mfrac>
                         <msqrt>
                             <mn>2</mn>
                         </msqrt>
@@ -44,7 +51,9 @@
                     </mfrac></math>
             </div>
             <div id="6" class="select">
-                <math><mfrac>
+                <math>
+                    <mo></mo>
+                    <mfrac>
                         <mn>1</mn>
                         <mn>2</mn>
                     </mfrac></math>
