--- a/code/html/index.html
+++ b/code/html/index.html
@@ -69,6 +69,5 @@
         </div>
     </div>
 </body>
-<script src="js/init.js"></script>
-<script src="js/index.js"></script>
+<script src="index.js"></script>
 </html>
