--- a/code/html/index.html
+++ b/code/html/index.html
@@ -69,5 +69,6 @@
         </div>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="js/init.js"></script>
+<script src="js/index.js"></script>
 </html>
