めちゃめちゃ怪しいけどできてそう

--- a/code/html/index.html
+++ b/code/html/index.html
@@ -9,7 +9,11 @@
 <body>
     <header>
         <div id="time">10</div>
-        <h1 id="q">sin30°</h1>
+        <h1 id="q">
+            <math>
+                sin<mn>1</mn><mn>3</mn>
+            </math>
+        </h1>
     </header>
 
     <div class="answer">
